--- a/weeks/week_08/lab_08/index.html
+++ b/weeks/week_08/lab_08/index.html
@@ -20,7 +20,6 @@
 		<div class="container">
 			<div class="section">
 				<h2>Part 1: Multiple Choice</h2>
-				<hr />
 				<!-- Single Question -->
 				<div>
 					<h3>How many reindeer are in Santa's sleigh?</h3>
@@ -53,9 +52,10 @@
 				</div>
 			</div>
 
+			<div class="underline"></div>
+
 			<div class="section">
 				<h2>Part 2: Free Response</h2>
-				<hr />
 				<!-- Single Question -->
 				<div class="free-response" data-id="0">
 					<h3>What is the most recorded song?</h3>
