Update p_set_08 webpage layout

--- a/weeks/week_08/p_set_08/contact.html
+++ b/weeks/week_08/p_set_08/contact.html
@@ -25,7 +25,7 @@
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 			<div class="container text-uppercase">
-				<a class="navbar-brand fs-4" href="#">My Page</a>
+				<a class="navbar-brand fs-4">My Page</a>
 				<button
 					class="navbar-toggler"
 					type="button"
