--- a/weeks/week_08/p_set_08/index.html
+++ b/weeks/week_08/p_set_08/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 			<div class="container text-uppercase">
-				<a class="navbar-brand fs-4" href="#">My Page</a>
+				<a class="navbar-brand fs-4">My Page</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -50,88 +50,81 @@
 			</div>
 		</nav>
 
-		<body>
-			<body>
-				<header class="">
-					<div class="mt-5 container">
-						<h1 class="display-3">My CS50 Problem Set 08</h1>
+		<header class="container">
+			<div class="mt-5 container-fluid">
+				<h1 class="display-3">My CS50 Problem Set 08</h1>
+			</div>
+		</header>
+
+		<main class="container">
+			<div class="mb-4 mt-4 rounded-3">
+				<div class="container-fluid py-3">
+					<h2 class="mb-4 display-5 fw-bold">CS50</h2>
+					<p class="mb-4 col-md-10 fs-4 lead">
+						The CS50 course at Harvard is an awesome way to learn
+						computer science. It covers a wide range of topics,
+						including algorithms, computer architecture, data
+						structures, databases, and web development. The course
+						is taught by world-renowned professors and includes
+						engaging lectures, interactive problem sets, and
+						hands-on projects. Whether you are a beginner or an
+						experienced programmer, you will learn a lot from this
+						course and have fun doing it.
+					</p>
+					<a
+						class="btn btn-primary btn-lg"
+						href="https://cs50.harvard.edu/x/2022/"
+						>Go to the course</a
+					>
+				</div>
+			</div>
+
+			<div class="container-fluid">
+				<div
+					class="row flex-lg-row-reverse align-items-center g-5 py-5"
+				>
+					<div class="col-10 col-sm-8 col-lg-5">
+						<img
+							src="hero.jpg"
+							class="d-block mx-lg-auto img-fluid rounded"
+							alt="Bootstrap Themes"
+							width="600"
+							height="400"
+							loading="lazy"
+						/>
 					</div>
-				</header>
-				<main class="container">
-					<div class="mb-4 mt-4 rounded-3">
-						<div class="container-fluid py-3">
-							<h2 class="mb-4 display-5 fw-bold">CS50</h2>
-							<p class="mb-4 col-md-10 fs-4 lead">
-								The CS50 course at Harvard is an awesome way to
-								learn computer science. It covers a wide range
-								of topics, including algorithms, computer
-								architecture, data structures, databases, and
-								web development. The course is taught by
-								world-renowned professors and includes engaging
-								lectures, interactive problem sets, and hands-on
-								projects. Whether you are a beginner or an
-								experienced programmer, you will learn a lot
-								from this course and have fun doing it.
-							</p>
+					<div class="col-lg-7">
+						<h1 class="display-5 fw-bold lh-1 mb-3">
+							Webpage using bootstrap
+						</h1>
+						<p class="lead">
+							As per problem set 08 CS50's problem set 08 this is
+							my webpage, using tags as main, div, img, buttons
+							and more. And harnessing the power of bootstrap.
+						</p>
+						<div class="gap-2 d-md-flex justify-content-md-start">
 							<a
-								class="btn btn-primary btn-lg"
-								href="https://cs50.harvard.edu/x/2022/"
-								>Go to the course</a
+								class="btn btn-primary btn-lg px-4 me-md-2"
+								target="_blank"
+								href="https://cs50.harvard.edu/x/2022/psets/8/homepage/"
+								>Problem Set</a
+							>
+							<a
+								class="btn btn-outline-light btn-lg px-4"
+								target="_blank"
+								href="https://getbootstrap.com/"
+								>Bootstrap</a
 							>
 						</div>
 					</div>
-
-					<div class="container col-xxl-8 px-4 py-5">
-						<div
-							class="row flex-lg-row-reverse align-items-center g-5 py-5"
-						>
-							<div class="col-10 col-sm-8 col-lg-6">
-								<img
-									src="hero.jpg"
-									class="d-block mx-lg-auto img-fluid rounded"
-									alt="Bootstrap Themes"
-									width="700"
-									height="500"
-									loading="lazy"
-								/>
-							</div>
-							<div class="col-lg-6">
-								<h1 class="display-5 fw-bold lh-1 mb-3">
-									Webpage using bootstrap
-								</h1>
-								<p class="lead">
-									As per problem set 08 CS50's problem set 08
-									this is my webpage, using tags as main, div,
-									img, buttons and more. And harnessing the
-									power of bootstrap.
-								</p>
-								<div
-									class="d-grid gap-2 d-md-flex justify-content-md-start"
-								>
-									<a
-										class="btn btn-primary btn-lg px-4 me-md-2"
-										target="_blank"
-										href="https://cs50.harvard.edu/x/2022/psets/8/homepage/"
-										>Problem Set</a
-									>
-									<a
-										class="btn btn-outline-light btn-lg px-4"
-										target="_blank"
-										href="https://getbootstrap.com/"
-										>Bootstrap</a
-									>
-								</div>
-							</div>
-						</div>
-					</div>
-				</main>
-			</body>
-
-			<footer class="py-2 pt-5 mt-5">
-				<div class="container">
-					<p class="text-center mb-0">By André Paulino</p>
 				</div>
-			</footer>
-		</body>
+			</div>
+		</main>
+
+		<footer class="py-2 pt-5 mt-5">
+			<div class="container">
+				<p class="text-center mb-0">By André Paulino</p>
+			</div>
+		</footer>
 	</body>
 </html>
